<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OtpVerifyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_sendotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/otp_receive"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/otpimage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/otp_verification"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/ubuntu_italic"
            android:gravity="center"
            android:text="@string/please_enter_otp_sent_to_you"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/txtmobileshownumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/inputotp1"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:layout_margin="2.5dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignor="LabelFor"/>
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/inputotp2"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:layout_margin="2.5dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignor="LabelFor"/>
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/inputotp3"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:layout_margin="2.5dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignor="LabelFor"/>
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/inputotp4"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:layout_margin="2.5dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignor="LabelFor"/>
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/inputotp5"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:layout_margin="2.5dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignor="LabelFor"/>
            <EditText
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/inputotp6"
                android:background="@drawable/backgroundbox"
                android:gravity="center"
                android:layout_margin="2.5dp"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignor="LabelFor"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Didn\'t receive the OTP ?"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textresendotp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/ubuntu_medium"
                android:text="RESEND OTP AGAIN"
                android:textColor="@color/black"
                android:textStyle="bold" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/submitotpbtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:background="@drawable/bgbutton"
                android:fontFamily="@font/ubuntu_medium"
                android:text="Submit"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressbar_verify_otp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>



    </LinearLayout>


</ScrollView>